<resources>
    <string name="app_name">WaterKeep</string>
    <string name="content_description_water_icon">Water Icon</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">수분섭취</string>
    <string name="title_dashboard">기록지</string>
    <string name="title_notifications">알람</string>
    <string name="title_chart">통계</string>
    <string name="title_impormation">환경설정</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <!-- Alarm -->
    <string name="title_alarm">Alarm %d</string>
    <string name="title_alarm_next">Next alarm: %s\n%s from now.</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_waters">Drinking</string>
    <string name="title_water_graph_year">Year</string>
    <string name="title_water_graph_month">Month</string>
    <string name="title_water_graph_week">Week</string>

    <string name="title_settings">Settings</string>
    <string name="title_none">None</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="title_repeat">요일선택</string>
    <string name="title_set_alarm">알람</string>
    <string name="title_set_timer">Timer</string>
    <string name="word_day">day</string>
    <string name="word_days">days</string>
    <string name="word_minute">minute</string>
    <string name="word_minutes">minutes</string>
    <string name="word_hour">hour</string>
    <string name="word_hours">hours</string>
    <string name="word_join">and</string>
    <string name="title_alarm_name">Alarm Name</string>
    <string name="title_sleep_reminder">Sleep Reminder</string>
    <string name="desc_sleep_reminder">Send a notification reminding you to go to sleep a certain time before your alarm rings if you\'re using your phone.</string>
    <string name="title_sleep_reminder_time">Sleep Reminder Time</string>
    <string name="desc_sleep_reminder_time">%1$d hours before</string>
    <string name="msg_alarms_empty">알람이 설정되지 않았습니다. + 버튼을 눌러주세요.</string>
    <string name="msg_waters_empty">물을 마셔주세요!</string>
    <string name="msg_water_graph_year_empty">물을 마신 데이터가 없습니다.</string>
    <string name="msg_water_graph_month_empty">이번달 물을 마신 데이터가 없습니다.</string>
    <string name="msg_water_graph_week_empty">이번주 물을 마신 데이터가 없습니다.</string>
    <string name="msg_water_graph_daily_empty">물을 마신 데이터가 없습니다.</string>

    <string name="start">GOT IT</string>

    <string name="msg_time_zones_selected">%d Selected</string>
    <string name="msg_sleep_reminder">Your next alarm will ring approximately %s from now. To get your specified amount of sleep in the settings menu, you should go to bed now.</string>
    <string name="msg_delete_confirmation">알람을 삭제 하시겠습니까?</string>
    <string name="title_delete">Delete</string>
    <string name="title_snooze_custom">Custom…</string>
    <string name="title_set_stopwatch">Stopwatch</string>
    <string name="title_ringtones">Ringtones</string>
    <string name="msg_radio_create">Create a new Radio</string>
    <string name="msg_radio_url">Paste an \'.m3u8\' Radio URL here…</string>
    <string name="title_radio_test">Test</string>
    <string name="title_radio_create">Create</string>
    <string name="msg_radio_previous">Choose a Previously Used Radio</string>
    <string name="title_radio">Radio</string>
    <string name="title_radio_stop">Stop</string>
    <string name="title_sound_none">None</string>

</resources>
